--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Compile Include="AbstractPacket.cs" />
     <Compile Include="Packet.cs" />
+    <Compile Include="PacketFactory.cs" />
     <Compile Include="PacketList.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -40,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
