--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -38,6 +38,12 @@
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
+    <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ConnectedEvent.cs" />
+    <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
+    <Compile Include="Sockets\Events\ReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SentEvent.cs" />
+    <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
