--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Packets\AddToBagPacket.cs" />
     <Compile Include="Packets\AdminPacket.cs" />
     <Compile Include="Packets\AttackPacket.cs" />
+    <Compile Include="Packets\AttributePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Sockets\Events\AddToBagPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AdminPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\AttackPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\AttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
