--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Packets\CharacterAttributePacket.cs" />
     <Compile Include="Packets\ChatChannelPacket.cs" />
     <Compile Include="Packets\ClearSpellPacket.cs" />
+    <Compile Include="Packets\CloseLootPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Sockets\Events\CharacterAttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ChatChannelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ClearSpellPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\CloseLootPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
