--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Packets\ClearSpellPacket.cs" />
     <Compile Include="Packets\CloseLootPacket.cs" />
     <Compile Include="Packets\CloseWindowPacket.cs" />
+    <Compile Include="Packets\ConfigurationPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Sockets\Events\ClearSpellPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\CloseLootPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\CloseWindowPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ConfigurationPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
