--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Packets\CloseLootPacket.cs" />
     <Compile Include="Packets\CloseWindowPacket.cs" />
     <Compile Include="Packets\ConfigurationPacket.cs" />
+    <Compile Include="Packets\DebugPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Sockets\Events\CloseWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConfigurationPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
+    <Compile Include="Sockets\Events\DebugPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
