--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Packets\CloseWindowPacket.cs" />
     <Compile Include="Packets\ConfigurationPacket.cs" />
     <Compile Include="Packets\DebugPacket.cs" />
+    <Compile Include="Packets\EditModePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Sockets\Events\ConnectedEvent.cs" />
     <Compile Include="Sockets\Events\DebugPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
+    <Compile Include="Sockets\Events\EditModePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
