--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Packets\ConfigurationPacket.cs" />
     <Compile Include="Packets\DebugPacket.cs" />
     <Compile Include="Packets\EditModePacket.cs" />
+    <Compile Include="Packets\EditObjectPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Sockets\Events\DebugPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\EditModePacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\EditObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
