--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Packets\DebugPacket.cs" />
     <Compile Include="Packets\EditModePacket.cs" />
     <Compile Include="Packets\EditObjectPacket.cs" />
+    <Compile Include="Packets\FocusPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Sockets\Events\DisconnectedEvent.cs" />
     <Compile Include="Sockets\Events\EditModePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\EditObjectPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\FocusPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
