--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Packets\GoodbyePacket.cs" />
     <Compile Include="Packets\GuildMiscellaneousPacket.cs" />
     <Compile Include="Packets\HandshakePacket.cs" />
+    <Compile Include="Packets\HealthBarPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Sockets\Events\GetVariablePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\GoodbyePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HandshakePacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\HealthBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
