--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Packets\GuildMiscellaneousPacket.cs" />
     <Compile Include="Packets\HandshakePacket.cs" />
     <Compile Include="Packets\HealthBarPacket.cs" />
+    <Compile Include="Packets\HideObjectPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Sockets\Events\GoodbyePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HandshakePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HealthBarPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\HideObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
