--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Packets\HandshakePacket.cs" />
     <Compile Include="Packets\HealthBarPacket.cs" />
     <Compile Include="Packets\HideObjectPacket.cs" />
+    <Compile Include="Packets\HouseItemTabPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Sockets\Events\HandshakePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HealthBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HideObjectPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\HouseItemTabPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
