--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Packets\HealthBarPacket.cs" />
     <Compile Include="Packets\HideObjectPacket.cs" />
     <Compile Include="Packets\HouseItemTabPacket.cs" />
+    <Compile Include="Packets\InitializationBarPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Sockets\Events\HealthBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HideObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HouseItemTabPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\InitializationBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
