--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Packets\HideObjectPacket.cs" />
     <Compile Include="Packets\HouseItemTabPacket.cs" />
     <Compile Include="Packets\InitializationBarPacket.cs" />
+    <Compile Include="Packets\InventoryPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Sockets\Events\HideObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\HouseItemTabPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\InitializationBarPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\InventoryPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
