--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Packets\HouseItemTabPacket.cs" />
     <Compile Include="Packets\InitializationBarPacket.cs" />
     <Compile Include="Packets\InventoryPacket.cs" />
+    <Compile Include="Packets\JoinPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Sockets\Events\HouseItemTabPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\InitializationBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\InventoryPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\JoinPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
