--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Packets\InitializationBarPacket.cs" />
     <Compile Include="Packets\InventoryPacket.cs" />
     <Compile Include="Packets\JoinPacket.cs" />
+    <Compile Include="Packets\LeavePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Sockets\Events\InitializationBarPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\InventoryPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\JoinPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\LeavePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
