--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Packets\JoinPacket.cs" />
     <Compile Include="Packets\LeavePacket.cs" />
     <Compile Include="Packets\LoadPanelPacket.cs" />
+    <Compile Include="Packets\LoadPicturePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Sockets\Events\JoinPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LeavePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LoadPanelPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\LoadPicturePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
