--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Packets\LeavePacket.cs" />
     <Compile Include="Packets\LoadPanelPacket.cs" />
     <Compile Include="Packets\LoadPicturePacket.cs" />
+    <Compile Include="Packets\LockPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Sockets\Events\LeavePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LoadPanelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LoadPicturePacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\LockPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
