--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Packets\LockPacket.cs" />
     <Compile Include="Packets\LoginPacket.cs" />
     <Compile Include="Packets\LoginReplyPacket.cs" />
+    <Compile Include="Packets\MeAttributePacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Sockets\Events\LoadPicturePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LockPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\LoginReplyPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\MeAttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
