--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Packets\MiscellaneousPacket.cs" />
     <Compile Include="Packets\Mode.cs" />
     <Compile Include="Packets\ModifyBagItemPacket.cs" />
+    <Compile Include="Packets\ModifyObjectPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Sockets\Events\MeAttributePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\MiscellaneousPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ModifyBagItemPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\ModifyObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
