--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Packets\MoveObjectOtherPacket.cs" />
     <Compile Include="Packets\MoveObjectPacket.cs" />
     <Compile Include="Packets\MovePacket.cs" />
+    <Compile Include="Packets\NewLockBoxPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="Sockets\Events\MoveObjectOtherPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\MoveObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\MovePacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\NewLockBoxPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
