--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Packets\MoveObjectPacket.cs" />
     <Compile Include="Packets\MovePacket.cs" />
     <Compile Include="Packets\NewLockBoxPacket.cs" />
+    <Compile Include="Packets\NoFloodWarningPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="Sockets\Events\MoveObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\MovePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\NewLockBoxPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\NoFloodWarningPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
