--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Packets\MovePacket.cs" />
     <Compile Include="Packets\NewLockBoxPacket.cs" />
     <Compile Include="Packets\NoFloodWarningPacket.cs" />
+    <Compile Include="Packets\OpenPanelPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="Sockets\Events\MovePacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\NewLockBoxPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\NoFloodWarningPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\OpenPanelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
