--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Packets\NewLockBoxPacket.cs" />
     <Compile Include="Packets\NoFloodWarningPacket.cs" />
     <Compile Include="Packets\OpenPanelPacket.cs" />
+    <Compile Include="Packets\OpenUrlPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Sockets\Events\NewLockBoxPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\NoFloodWarningPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenPanelPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\OpenUrlPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
