--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Packets\NoFloodWarningPacket.cs" />
     <Compile Include="Packets\OpenPanelPacket.cs" />
     <Compile Include="Packets\OpenUrlPacket.cs" />
+    <Compile Include="Packets\OpenWindowPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Sockets\Events\NoFloodWarningPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenPanelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenUrlPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\OpenWindowPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
