--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Packets\OpenPanelPacket.cs" />
     <Compile Include="Packets\OpenUrlPacket.cs" />
     <Compile Include="Packets\OpenWindowPacket.cs" />
+    <Compile Include="Packets\PartyPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Sockets\Events\OpenPanelPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenUrlPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\OpenWindowPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\PartyPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
