--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Packets\PlayerMenuPacket.cs" />
     <Compile Include="Packets\PlayPacket.cs" />
     <Compile Include="Packets\RemoveCharacterPacket.cs" />
+    <Compile Include="Packets\RemoveObjectPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -147,6 +148,7 @@
     <Compile Include="Sockets\Events\PlayPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\ReceivedEvent.cs" />
     <Compile Include="Sockets\Events\RemoveCharacterPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\RemoveObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
