--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Packets\RemoveCharacterPacket.cs" />
     <Compile Include="Packets\RemoveObjectPacket.cs" />
     <Compile Include="Packets\RemovePlayerPacket.cs" />
+    <Compile Include="Packets\SayPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -151,6 +152,7 @@
     <Compile Include="Sockets\Events\RemoveCharacterPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\RemoveObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\RemovePlayerPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SayPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
