--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Packets\RemoveObjectPacket.cs" />
     <Compile Include="Packets\RemovePlayerPacket.cs" />
     <Compile Include="Packets\SayPacket.cs" />
+    <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Sockets\Events\AbstractPacketReceivedEvent.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="Sockets\Events\RemovePlayerPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SayPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
+    <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
