--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Packets\RemoveObjectPacket.cs" />
     <Compile Include="Packets\RemovePlayerPacket.cs" />
     <Compile Include="Packets\SayPacket.cs" />
+    <Compile Include="Packets\SelectedPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -155,6 +156,7 @@
     <Compile Include="Sockets\Events\RemoveObjectPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\RemovePlayerPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SayPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SelectedPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
