--- a/OgreIsland/OgreIsland.csproj
+++ b/OgreIsland/OgreIsland.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Packets\SayPacket.cs" />
     <Compile Include="Packets\SelectedPacket.cs" />
     <Compile Include="Packets\SetActionPacket.cs" />
+    <Compile Include="Packets\SetClipsPacket.cs" />
     <Compile Include="Packets\SpellBarTextLeftPacket.cs" />
     <Compile Include="Packets\SpellBarTextRightPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -160,6 +161,7 @@
     <Compile Include="Sockets\Events\SelectedPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SentEvent.cs" />
     <Compile Include="Sockets\Events\SetActionPacketReceivedEvent.cs" />
+    <Compile Include="Sockets\Events\SetClipsPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextLeftPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Events\SpellBarTextRightPacketReceivedEvent.cs" />
     <Compile Include="Sockets\Socket.cs" />
